# NetGuardian

./: .gitignore
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  render_manager.cpp  traffic_analyzer.cpp
entry/src/main/cpp/include/: render_manager.h
entry/src/main/cpp/types/libnet_guardian/: index.d.ts  oh-package.json5
entry/src/main/ets/common/database/: RdbManager.ts
entry/src/main/ets/common/utils/: BasicDataSource.ts  DateUtils.ts  IpUtils.ts  Logger.ts
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/model/: HistoryDataSource.ts  HistoryRecord.ts  INetInfo.ts  NetInfoModel.ets  NetInfoModel.ts
entry/src/main/ets/pages/: Index.ets
entry/src/main/ets/service/: NetMonitorService.ets  NetMonitorService.ts  SpeedTestEngine.ts
entry/src/main/ets/view/: ClearHistoryDialog.ets  DashboardComponent.ets  HistoryComponent.ets  InfoItemComponent.ets  SettingComponent.ets  TrafficWaveComponent.ets
entry/src/main/ets/viewmodel/: MainViewModel.ts
entry/src/main/resources/base/element/: string.json
